# IO

./: .gitignore  Cargo.toml  README.md  deny.toml  icp.yaml  package-lock.json  package.json
.github/workflows/: reproducible-build.yml  security.yml  test.yml
canisters/frontend/: Cargo.toml  README.md  frontend.did
canisters/frontend/public/: 404.html  base.css  hero.css  index.html  metrics.css
canisters/frontend/public/.well-known/: ic-domains
canisters/frontend/src/: lib.rs
canisters/frontend/web/: build-frontend.mjs  index.template.html
canisters/frontend/web/declarations/io_historian/: index.js  io_historian.did.js
canisters/frontend/web/src/: dom-helpers.js  main.js
canisters/frontend/web/src/app/: agent.js  bootstrap.js  config.js  view-formatters.js
canisters/frontend/web/src/data/: dashboard-transforms.js  historian-loaders.js
canisters/frontend/web/src/ui/: charts.js  dashboard-renderer.js  hero-sphere.js
canisters/frontend/web/test/: charts.test.mjs  dashboard-loaders.test.mjs  dashboard-transforms.test.mjs  dom-helpers.test.mjs  frontend-exports.test.mjs  hero-sphere.test.mjs  view-formatters.test.mjs  xss-regression.test.mjs
canisters/io_historian/: Cargo.toml  README.md  io_historian.did  io_historian_debug.did
canisters/io_historian/src/: lib.rs
canisters/io_nns_neuron_manager/: Cargo.toml  README.md  io_nns_neuron_manager.did  io_nns_neuron_manager_debug.did  mainnet-install-args.did
canisters/io_nns_neuron_manager/src/: lib.rs
canisters/io_nns_neuron_manager/src/clients/: icp_ledger.rs  mod.rs  nns_governance.rs
canisters/io_nns_neuron_manager/src/scheduler/: mod.rs
canisters/io_stream_manager/: Cargo.toml  README.md  build.rs  io_stream_manager.did  io_stream_manager_debug.did  mainnet-install-args.did
canisters/io_stream_manager/src/: governance_snapshot.rs  lib.rs  logic.rs  state.rs
canisters/io_stream_manager/src/clients/: icp_index.rs  icp_ledger.rs  io_ledger.rs  mod.rs  sns_governance.rs
canisters/io_stream_manager/src/scheduler/: mod.rs
crates/io_build_support/: Cargo.toml
crates/io_build_support/src/: lib.rs
crates/io_core_model/: Cargo.toml
crates/io_core_model/src/: lib.rs
crates/io_governance_types/: Cargo.toml
crates/io_governance_types/src/: lib.rs
crates/io_ledger_types/: Cargo.toml
crates/io_ledger_types/src/: lib.rs
crates/io_production_wiring/: Cargo.toml
crates/io_production_wiring/src/: lib.rs
crates/io_reward_policy/: Cargo.toml
crates/io_reward_policy/src/: lib.rs
crates/io_sns_lifecycle/: Cargo.toml
crates/io_sns_lifecycle/src/: lib.rs
crates/io_stable_schema/: Cargo.toml
crates/io_stable_schema/src/: lib.rs
deploy/local-sns-rehearsal/: README.md  canister-ids.local.example.toml  commands.local.example.md  local-vars.example.toml  real-canister-e2e-evidence.example.toml  runbook.sh  sns_init.local.template.yaml  sns_init.local.yaml
deploy/local-sns-rehearsal/scripts/: 00-check-prereqs.sh  01-render-sns-init.sh  02-record-canister-ids.sh  03-capture-ledger-evidence.sh  04-render-local-wiring.sh  05-validate-evidence.sh  check-prereqs.sh  lib-local-sns.sh  render-local-wiring.sh
deploy/mainnet-dev/legacy-phase1/: README.md  canister-ids.toml  status.md
deploy/phase1-mainnet/: README.md  canister-ids.toml  status.md
deploy/production-wiring/: README.md  canister-ids.toml  dry-run.example.toml  template.toml
docs/architecture/: api-surface.md  canister-roles.md  fee-dust-accounting.md  governance-clients.md  historian-ingestion.md  historian.md  integration-slice.md  journal-compaction.md  ledger-index-clients.md  monetary-policy.md  nns-neuron-manager.md  reward-allocation.md  scheduler.md  sns-eligibility.md  sns-root-lifecycle.md  stable-storage.md  stable-structures-evaluation.md  stream-manager.md  upgrades.md
docs/development/: pocketic.md  testing.md
docs/operations/: deployment.md  emergency-runbook.md  historian-freshness.md  local-sns-testing.md  mainnet-prelaunch-dry-run.md  mainnet-readiness.md  official-local-sns-rehearsal.md  official-sns-testing.md  prelaunch-config-validation.md  production-wiring.md  release-checklist.md  reproducible-builds.md  sns-testflight-plan.md  sns-testing-layers.md
docs/security/: audit-readiness.md  controller-and-recovery.md  dependency-and-supply-chain.md  threat-model.md
docs/testing/: current-test-inventory.md  e2e-coverage-matrix.md  e2e-scenario-specs.md  real-canister-pocketic-plan.md  real-framework-artifact-and-sns-setup.md
release-artifacts/: io_frontend.wasm  io_frontend.wasm.gz.sha256  io_frontend.wasm.sha256  io_historian.wasm  io_historian.wasm.gz.sha256  io_historian.wasm.sha256  io_nns_neuron_manager.wasm  io_nns_neuron_manager.wasm.gz.sha256  io_nns_neuron_manager.wasm.sha256  io_stream_manager.wasm  io_stream_manager.wasm.gz.sha256  io_stream_manager.wasm.sha256  manifest.json
tests/cli/: io_nns_neuron_manager_cli.rs  io_stream_manager_cli.rs
tests/e2e/: io_e2e.rs
tests/e2e_real_canisters/: Cargo.toml  wasms.example.toml
tests/e2e_real_canisters/src/: artifacts.rs  brief_blockers.rs  exact_economics.rs  framework.rs  icrc.rs  io_protocol_real_stack.rs  lib.rs  nns_setup.rs  pocketic_env.rs  sns_governance_setup.rs  sns_ledger_index.rs  sns_lifecycle.rs  sns_root_setup.rs  sns_wasm_setup.rs
tests/fixtures/stable-state/: README.md
tests/mocks/mock_icp_index/: Cargo.toml
tests/pocketic/: io_frontend_pocketic.rs  io_historian_pocketic.rs  io_nns_neuron_manager_pocketic.rs  io_sns_governance_read_pocketic.rs  io_sns_root_lifecycle_pocketic.rs  io_sns_topology_pocketic.rs  io_stream_manager_pocketic.rs
tools/scripts/: build-canister  fetch-real-canister-artifacts  run-real-framework-e2e  security-scan  validate-mainnet-install-args
tools/sns/: README.md  launch-readiness.toml  official-sns-testing-notes.md  sns_init.io.local.yaml  sns_init.io.template.yaml  sns_init.io.testflight.template.yaml
tools/sns-testing/: README.md  check-prereqs.sh  deploy-io-dapp-local.sh  run-local-sns-testing.sh  validate-local-sns-config.sh
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
(+39 files in other folders)
