[workspace]
resolver = "2"
members = [
  "canisters/io_nns_neuron_manager",
  "canisters/io_stream_manager",
  "canisters/io_historian",
  "canisters/frontend",
  "crates/io_core_model",
  "crates/io_reward_policy",
  "crates/io_build_support",
  "tests/mocks/mock_icp_ledger",
  "tests/mocks/mock_io_ledger",
  "tests/mocks/mock_icp_index",
  "tests/mocks/mock_io_index",
  "tests/mocks/mock_nns_governance",
  "tests/mocks/mock_sns_governance",
  "tests/mocks/mock_jupiter_faucet",
  "tools/xtask",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
candid = "0.10.29"
ic-cdk = "0.20.1"
io-core-model = { path = "crates/io_core_model" }
io-reward-policy = { path = "crates/io_reward_policy" }
io-build-support = { path = "crates/io_build_support" }
io-nns-neuron-manager = { path = "canisters/io_nns_neuron_manager" }
serde = { version = "1.0.228", features = ["derive"] }
pocket-ic = "14.0.0"
