[workspace]
resolver = "2"
members = [
  "canisters/io_nns_neuron_manager",
  "canisters/io_stream_manager",
  "canisters/io_historian",
  "canisters/frontend",
  "crates/io_core_model",
  "crates/io_governance_types",
  "crates/io_ledger_types",
  "crates/io_production_wiring",
  "crates/io_reward_policy",
  "crates/io_build_support",
  "crates/io_sns_lifecycle",
  "crates/io_stable_schema",
  "tests/mocks/mock_icp_ledger",
  "tests/mocks/mock_io_ledger",
  "tests/mocks/mock_icp_index",
  "tests/mocks/mock_io_index",
  "tests/mocks/mock_nns_governance",
  "tests/mocks/mock_sns_governance",
  "tests/mocks/mock_sns_root",
  "tests/mocks/mock_jupiter_faucet",
  "tests/e2e_real_canisters",
  "tools/xtask",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
candid = "0.10.29"
ic-cdk = "0.20.1"
ic-asset-certification = "3.2.0"
ic-http-certification = "3.2.0"
include_dir = "0.7.4"
io-core-model = { path = "crates/io_core_model" }
io-governance-types = { path = "crates/io_governance_types" }
io-ledger-types = { path = "crates/io_ledger_types" }
io-production-wiring = { path = "crates/io_production_wiring" }
io-reward-policy = { path = "crates/io_reward_policy" }
io-build-support = { path = "crates/io_build_support" }
io-sns-lifecycle = { path = "crates/io_sns_lifecycle" }
io-stable-schema = { path = "crates/io_stable_schema" }
io-nns-neuron-manager = { path = "canisters/io_nns_neuron_manager" }
serde = { version = "1.0.228", features = ["derive"] }
pocket-ic = "14.0.0"
mime_guess = "2.0.5"
