[package]
name = "io-stream-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[test]]
name = "io_stream_manager_pocketic"
path = "../../tests/pocketic/io_stream_manager_pocketic.rs"

[[test]]
name = "io_sns_topology_pocketic"
path = "../../tests/pocketic/io_sns_topology_pocketic.rs"

[[test]]
name = "io_sns_governance_read_pocketic"
path = "../../tests/pocketic/io_sns_governance_read_pocketic.rs"

[[test]]
name = "io_sns_root_lifecycle_pocketic"
path = "../../tests/pocketic/io_sns_root_lifecycle_pocketic.rs"

[[test]]
name = "io_stream_manager_cli"
path = "../../tests/cli/io_stream_manager_cli.rs"

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
io-core-model.workspace = true
io-governance-types.workspace = true
io-ledger-types.workspace = true
io-production-wiring.workspace = true
io-reward-policy.workspace = true
io-stable-schema.workspace = true
serde.workspace = true

[build-dependencies]
io-build-support.workspace = true

[[test]]
name = "io_e2e"
path = "../../tests/e2e/io_e2e.rs"

[dev-dependencies]
io-sns-lifecycle.workspace = true
io-nns-neuron-manager.workspace = true
pocket-ic.workspace = true
sha2 = "0.10.9"
