[package]
name = "e2e-real-canisters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candid.workspace = true
hex = "0.4.3"
io-governance-types.workspace = true
io-ledger-types.workspace = true
io-stream-manager = { path = "../../canisters/io_stream_manager" }
io-production-wiring.workspace = true
io-reward-policy.workspace = true
io-core-model.workspace = true
pocket-ic.workspace = true
serde.workspace = true
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.23.0"
